apps/cluster1/metube/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: metube
spec:
  template:
    spec:
      containers:
      - name: metube
        volumeMounts:
        - mountPath: /downloads
          name: downloads
      volumes:
      - name: downloads
        hostPath:
          path: /srv/video/metube
          type: Directory
